--- a/bhoma/xforms/bhoma_delivery.xhtml
+++ b/bhoma/xforms/bhoma_delivery.xhtml
@@ -234,7 +234,7 @@
     <bind nodeset="drugs/prescribed/med/uncommon/drug_choices_three" relevant="selected(../drug_drill_down, 'drugs_three')" /> <!-- make select? -->
     <bind nodeset="drugs/prescribed/med/uncommon/drug_choices_four" relevant="selected(../drug_drill_down, 'drugs_four')" /> <!-- make select? -->
 	<bind nodeset="drugs/prescribed/med/uncommon/drug_prescribed" calculate="if(../drug_name_typed !='', ../drug_name_typed, if(../drug_choices_one != '', ../drug_choices_one, if(../drug_choices_two != '', ../drug_choices_two, if(../drug_choices_three != '', ../drug_choices_three, ../drug_choices_four))))" />
-    <bind nodeset="drugs/prescribed/med/uncommon/dosage" type="decimal" /> <!-- make select? -->
+    <bind nodeset="drugs/prescribed/med/uncommon/dosage" type="decimal" constraint=". != '0'" jr:constraintMsg="Dosage can't be 0" /> <!-- make select? -->
     <bind nodeset="drugs/prescribed/med/uncommon/drug_formulation" required = "true()" />
     <bind nodeset="drugs/prescribed/med/uncommon/freq" required="true()" /> <!-- make select? -->
     <bind nodeset="drugs/prescribed/med/uncommon/freq_other" type="int" relevant="../freq = 'other'" /> <!-- make select? -->
@@ -251,14 +251,14 @@
     <bind nodeset="drugs/dispensed/med/uncommon/drug_choices_three" relevant="selected(../drug_drill_down, 'drugs_three')" /> <!-- make select? -->
     <bind nodeset="drugs/dispensed/med/uncommon/drug_choices_four" relevant="selected(../drug_drill_down, 'drugs_four')" /> <!-- make select? -->
 	<bind nodeset="drugs/dispensed/med/uncommon/drug_dispensed" calculate="if(../drug_name_typed !='', ../drug_name_typed, if(../drug_choices_one != '', ../drug_choices_one, if(../drug_choices_two != '', ../drug_choices_two, if(../drug_choices_three != '', ../drug_choices_three, ../drug_choices_four))))" />
-    <bind nodeset="drugs/dispensed/med/uncommon/dosage" type="decimal" /> <!-- make select? -->
+    <bind nodeset="drugs/dispensed/med/uncommon/dosage" type="decimal" constraint=". != '0'" jr:constraintMsg="Dosage can't be 0" /> <!-- make select? -->
     <bind nodeset="drugs/dispensed/med/uncommon/drug_formulation" required = "true()" />
     <bind nodeset="drugs/dispensed/med/uncommon/freq" required="true()" /> <!-- make select? -->
     <bind nodeset="drugs/dispensed/med/uncommon/freq_other" type="int" relevant="../freq = 'other'" /> <!-- make select? -->
     <bind nodeset="drugs/dispensed/med/uncommon/duration" type="int" /> <!-- make select? -->
     <bind nodeset="other_treatment" required="true()" relevant="../continue_form = 'y'" constraint="not(selected(., 'blank') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'No Other Treatments' and another answer" />
     <bind nodeset="resolution" relevant="../continue_form = 'y'" required="true()" />
-	<bind nodeset="death_details" required="true()" relevant="../resolution = 'death'" constraint="not(selected(., 'blank') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'Both Boxes Left Blank' and another answer"/>
+	<bind nodeset="death_details" required="true()" relevant="../resolution = 'death'" />
     <bind nodeset="followup_days" type="int" constraint=". &lt;= 100" jr:constraintMsg="Follow ups should be in fewer than 100 days." relevant="../resolution = 'followup'" />    
 
 	</model>
@@ -587,24 +587,24 @@
 
   <select ref="complications/prolonged_labour">
     <label>Symptoms of Prolonged Labour or Malpres.</label>
-    <item><label>SEVERE: fhr &lt;= 110 bpm</label><value>sev_fhr</value></item>
+    <item><label>SEVERE: FHR &lt;= 110 bpm</label><value>sev_fhr</value></item>
     <item><label>MODERATE: onset of labour &gt; 24h</label><value>mod_onset</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
   </select>
 
   <select ref="complications/hypertension">
     <label>Symptoms of Hypertension</label>
-    <item><label>SEVERE: sbp &gt;= 160</label><value>sev_sbp</value></item>
-    <item><label>SEVERE: dbp &gt;= 110</label><value>sev_dbp</value></item>
-    <item><label>SEVERE: urine protein &gt;= 3+</label><value>sev_urine</value></item>
+    <item><label>SEVERE: SBP &gt;= 160</label><value>sev_sbp</value></item>
+	<item><label>SEVERE: DBP &gt;= 110</label><value>sev_dbp</value></item>
+	<item><label>SEVERE: urine protein &gt;= 3+</label><value>sev_urine</value></item>
     <item><label>SEVERE: hgb &lt; 8 g/dL</label><value>sev_hgb</value></item>
     <item><label>SEVERE: seizure</label><value>sev_seizure</value></item>
     <item><label>SEVERE: altered mental status</label><value>sev_altered</value></item>
     <item><label>SEVERE: severe headache</label><value>sev_headache</value></item>
     <item><label>SEVERE: visual changes</label><value>sev_visual_changes</value></item>
     <item><label>SEVERE: abd pain/tenderness</label><value>sev_abd_pain</value></item>
-    <item><label>MODERATE: sbp &gt;= 140</label><value>mod_sbp</value></item>
-    <item><label>MODERATE: dbp &gt;= 90</label><value>mod_dbp</value></item>
+    <item><label>MODERATE: SBP &gt;= 140</label><value>mod_sbp</value></item>
+    <item><label>MODERATE: DBP &gt;= 90</label><value>mod_dbp</value></item>
     <item><label>MODERATE: urine protein 1+ or 2+</label><value>mod_urine</value></item>
     <item><label>MODERATE: hgb &gt;= 8 g/dL</label><value>mod_hgb</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
@@ -612,9 +612,9 @@
 
   <select ref="complications/fever">
     <label>Symptoms of Fever</label>
-    <item><label>SEVERE: sbp &lt;= 90</label><value>sev_sbp</value></item>
-	<item><label>SEVERE: rr &gt;= 20</label><value>sev_resp_rate</value></item>
-    <item><label>SEVERE: mat hr &gt;= 100 bpm</label><value>sev_mat_hr</value></item>
+    <item><label>SEVERE: SBP &lt;= 90</label><value>sev_sbp</value></item>
+	<item><label>SEVERE: RR &gt;= 20</label><value>sev_resp_rate</value></item>
+    <item><label>SEVERE: mat HR &gt;= 100 bpm</label><value>sev_mat_hr</value></item>
     <item><label>SEVERE: altered mental status</label><value>sev_altered</value></item>
     <item><label>MODERATE: abd pain/tenderness</label><value>mod_abd_pain</value></item>
     <item><label>MODERATE: foul vaginal discharge</label><value>mod_foul_discharge</value></item>
@@ -623,9 +623,9 @@
 
   <select ref="complications/vag_bleed">
     <label>Symptoms of Vaginal Bleeding</label>
-    <item><label>SEVERE: sbp &lt;= 90</label><value>sev_sbp</value></item>
-	<item><label>SEVERE: rr &gt;= 20</label><value>sev_resp_rate</value></item>
-    <item><label>SEVERE: mat hr &gt;= 100 bpm</label><value>sev_mat_hr</value></item>
+    <item><label>SEVERE: SBP &lt;= 90</label><value>sev_sbp</value></item>
+	<item><label>SEVERE: RR &gt;= 20</label><value>sev_resp_rate</value></item>
+    <item><label>SEVERE: mat HR &gt;= 100 bpm</label><value>sev_mat_hr</value></item>
 	<item><label>SEVERE: hgb &lt; 8 g/dL</label><value>sev_hgb</value></item>
     <item><label>SEVERE: altered mental status</label><value>sev_altered</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
@@ -633,9 +633,9 @@
 
   <select ref="complications/mem_rupture">
     <label>Symptoms of Rupture of Membranes</label>
-    <item><label>SEVERE: sbp &lt;= 90</label><value>sev_sbp</value></item>
-	<item><label>SEVERE: rr &gt;= 20</label><value>sev_resp_rate</value></item>
-    <item><label>SEVERE: mat hr &gt;= 100 bpm</label><value>sev_mat_hr</value></item>
+    <item><label>SEVERE: SBP &lt;= 90</label><value>sev_sbp</value></item>
+	<item><label>SEVERE: RR &gt;= 20</label><value>sev_resp_rate</value></item>
+    <item><label>SEVERE: mat HR &gt;= 100 bpm</label><value>sev_mat_hr</value></item>
     <item><label>SEVERE: temp &gt;= 38&#xb0;C</label><value>sev_temp</value></item>
 	<item><label>SEVERE: &gt;= 34 weeks, ROM &gt;= 24 hrs</label><value>sev_34_weeks</value></item>
 	<item><label>SEVERE: 28 - 34 weeks</label><value>sev_28_weeks</value></item>
@@ -663,7 +663,7 @@
     <item><label>PPROM (28-36 weeks)</label><value>pprom_36_weeks</value></item>
 	<item><label>PPROM (&lt; 28 weeks)</label><value>pprom_28_weeks</value></item>
 	<item><label>Uterine Infection</label><value>uterine_infection</value></item>
-    <item><label>Section Left Blank</label><value>blank</value></item>
+	<item><label>None of these Diagnoses Selected</label><value>blank</value></item>
 	<hint> Select any secondary diagnoses for the patient </hint>
   </select>
 
@@ -693,11 +693,11 @@
   <label>Prescribed Drug</label>
   <repeat nodeset="drugs/prescribed/med">
     <jr:chooseCaption><output value="$i" />. <output value="if(common_drug != 'enter_manually', prettify-drug(common_drug), if(uncommon/drug_prescribed, prettify-drug(uncommon/drug_prescribed), '(no drug selected)'))" /></jr:chooseCaption>
-    <jr:mainHeader>Describe Treatment:</jr:mainHeader>
+    <jr:mainHeader>Describe Protocol Recommended Treatment:</jr:mainHeader>
     <jr:addCaption>Add another <output value="$name" /></jr:addCaption>
     <jr:addEmptyCaption>Add a <output value="$name" /></jr:addEmptyCaption>
-    <jr:doneCaption>No more drugs to enter; Next question</jr:doneCaption>
-    <jr:doneEmptyCaption>No drugs to enter; Skip question</jr:doneEmptyCaption>
+    <jr:doneCaption>No more protocol recommended drugs to enter; Next question</jr:doneCaption>
+    <jr:doneEmptyCaption>No protocol recommended drugs to enter; Skip question</jr:doneEmptyCaption>
     <jr:delCaption>Remove a <output value="$name" /></jr:delCaption>
 
 	<select1 ref="common_drug_one">
@@ -715,6 +715,7 @@
 		<item><label>Co-trimoxazole (Septrin), 240 mg, tablet, BD x 5 days</label><value>co_trimoxazole-tablet-240-2-5</value></item>
 		<item><label>Co-trimoxazole (Septrin), 960 mg, tablet, BD x 5 days</label><value>co_trimoxazole-tablet-960-2-5</value></item>
 		<item><label>See More Options of Commonly Prescribed Drugs</label><value>more_options</value></item>
+		<item><label>Prescription not on Common Drug List - Search Alphabetically</label><value>enter_manually</value></item>
 	</select1>	
 	
 	<select1 ref="common_drug_two">
@@ -730,7 +731,7 @@
 		<item><label>Paracetamol (Panadol), 500 mg, tablet, BD x 3 days</label><value>paracetamol-tablet-500-2-3</value></item>
 		<item><label>Paracetamol (Panadol), 1000 mg (1 g), tablet, TDS x 3 days</label><value>paracetamol-tablet-1000-3-3</value></item>
 		<item><label>ORS, sachet, 200mL after each loose stool</label><value>ors-sachet-200--</value></item>
-		<item><label>Prescription not on Common Drug List - Enter in Steps</label><value>enter_manually</value></item>
+		<item><label>Prescription not on Common Drug List - Search Alphabetically</label><value>enter_manually</value></item>
 	</select1>
 	
 	<select1 ref="uncommon/drug_drill_down">
@@ -792,7 +793,7 @@
 		<item><label>Ethambutol / Isoniazid</label><value>ethambutol_isoniazid</value></item>
 		<item><label>Ethambutol</label><value>ethambutol</value></item>
 		<item><label>Ethmbtl/Isnzd/Prznmd/Rfmpcn (4FDC)</label><value>ethambutol_isoniazid_pyrazinam</value></item>
-		<item><label>Ferrous Sulphate BP (FeSo4)</label><value>ferrous_sulphate_bp</value></item>
+		<item><label>Ferrous Sulphate BP (FeSO4)</label><value>ferrous_sulphate_bp</value></item>
 		<item><label>Fluconazole</label><value>fluconazole</value></item>
 		<item><label>Folic Acid</label><value>folic_acid</value></item>
 		<item><label>Frusemide (Lasix)</label><value>frusemide</value></item>
@@ -812,7 +813,7 @@
 		<item><label>Levonorgestrel (Microlut)</label><value>levonorgestrel_microlut</value></item>
 		<item><label>Lignocaine 1%</label><value>lignocaine</value></item>
 		<item><label>Lopinavir/Ritonavir (LPV/r)</label><value>lopinavir_ritonavir</value></item>
-		<item><label>Magnesium Sulphate (MgSo4)</label><value>magnesium_sulphate</value></item>
+		<item><label>Magnesium Sulphate (MgSO4)</label><value>magnesium_sulphate</value></item>
 		<item><label>Magnesium Trisilicate (MMT)</label><value>magnesium_trisilicate</value></item>
 		<item><label>Mebendazole (Vermox)</label><value>mebendazole</value></item>
 		<item><label>Methyldopa (Aldomet)</label><value>methyldopa</value></item>
@@ -852,7 +853,7 @@
 		<item><label>Stavudine (d4T)</label><value>stavudine</value></item>
 		<item><label>Stavudine/Lamivudine (d4T + 3TC )</label><value>stavudine_lamivudine</value></item>
 		<item><label>Streptomycin</label><value>streptomycin</value></item>
-		<item><label>Tenofovir/Emitricitabine (TDF + FTC)</label><value>tenofovir_emitricitabine</value></item>
+		<item><label>Tenofovir/Emtricitabine (TDF + FTC)</label><value>tenofovir_emtricitabine</value></item>
 		<item><label>Tenofovir/Lamivudine (TDF + 3TC)</label><value>tenofovir_lamivudine</value></item>
 		<item><label>Tetracycline</label><value>tetracycline</value></item>
 		<item><label>Zidovudine (AZT)</label><value>zidovudine</value></item>
@@ -908,10 +909,10 @@
   </group>
 
   <group>
-  <label>Dispensed/Substituted Drug</label>
+  <label>Substituted Drug</label>
   <repeat nodeset="drugs/dispensed/med">
     <jr:chooseCaption><output value="$i" />. <output value="if(common_drug != 'enter_manually', prettify-drug(common_drug), if(uncommon/drug_dispensed, prettify-drug(uncommon/drug_dispensed), '(no drug selected)'))" /></jr:chooseCaption>
-    <jr:mainHeader>Describe drugs dispensed and not on prescription:</jr:mainHeader>
+    <jr:mainHeader>Describe Drug Substitutions:</jr:mainHeader>
     <jr:addCaption>Add another <output value="$name" /></jr:addCaption>
     <jr:addEmptyCaption>Add a <output value="$name" /></jr:addEmptyCaption>
     <jr:doneCaption>No more drugs to enter; Next question</jr:doneCaption>
@@ -933,6 +934,7 @@
 		<item><label>Co-trimoxazole (Septrin), 240 mg, tablet, BD x 5 days</label><value>co_trimoxazole-tablet-240-2-5</value></item>
 		<item><label>Co-trimoxazole (Septrin), 960 mg, tablet, BD x 5 days</label><value>co_trimoxazole-tablet-960-2-5</value></item>
 		<item><label>See More Options of Commonly Prescribed Drugs</label><value>more_options</value></item>
+		<item><label>Substitution not on Common Drug List - Search Alphabetically</label><value>enter_manually</value></item>
 	</select1>	
 	
 	<select1 ref="common_drug_two">
@@ -948,7 +950,7 @@
 		<item><label>Paracetamol (Panadol), 500 mg, tablet, BD x 3 days</label><value>paracetamol-tablet-500-2-3</value></item>
 		<item><label>Paracetamol (Panadol), 1000 mg (1 g), tablet, TDS x 3 days</label><value>paracetamol-tablet-1000-3-3</value></item>
 		<item><label>ORS, sachet, 200mL after each loose stool</label><value>ors-sachet-200--</value></item>
-		<item><label>Substitution not on Common Drug List - Enter in Steps</label><value>enter_manually</value></item>
+		<item><label>Substitution not on Common Drug List - Search Alphabetically</label><value>enter_manually</value></item>
 	</select1>
 	
 	<select1 ref="uncommon/drug_drill_down">
@@ -1010,7 +1012,7 @@
 		<item><label>Ethambutol / Isoniazid</label><value>ethambutol_isoniazid</value></item>
 		<item><label>Ethambutol</label><value>ethambutol</value></item>
 		<item><label>Ethmbtl/Isnzd/Prznmd/Rfmpcn (4FDC)</label><value>ethambutol_isoniazid_pyrazinam</value></item>
-		<item><label>Ferrous Sulphate BP (FeSo4)</label><value>ferrous_sulphate_bp</value></item>
+		<item><label>Ferrous Sulphate BP (FeSO4)</label><value>ferrous_sulphate_bp</value></item>
 		<item><label>Fluconazole</label><value>fluconazole</value></item>
 		<item><label>Folic Acid</label><value>folic_acid</value></item>
 		<item><label>Frusemide (Lasix)</label><value>frusemide</value></item>
@@ -1029,7 +1031,7 @@
 		<item><label>Levonorgestrel (Microlut)</label><value>levonorgestrel_microlut</value></item>
 		<item><label>Lignocaine 1%</label><value>lignocaine</value></item>
 		<item><label>Lopinavir/Ritonavir (LPV/r)</label><value>lopinavir_ritonavir</value></item>
-		<item><label>Magnesium Sulphate (MgSo4)</label><value>magnesium_sulphate</value></item>
+		<item><label>Magnesium Sulphate (MgSO4)</label><value>magnesium_sulphate</value></item>
 		<item><label>Magnesium Trisilicate (MMT)</label><value>magnesium_trisilicate</value></item>
 		<item><label>Mebendazole (Vermox)</label><value>mebendazole</value></item>
 		<item><label>Methyldopa (Aldomet)</label><value>methyldopa</value></item>
@@ -1069,7 +1071,7 @@
 		<item><label>Stavudine (d4T)</label><value>stavudine</value></item>
 		<item><label>Stavudine/Lamivudine (d4T + 3TC )</label><value>stavudine_lamivudine</value></item>
 		<item><label>Streptomycin</label><value>streptomycin</value></item>
-		<item><label>Tenofovir/Emitricitabine (TDF + FTC)</label><value>tenofovir_emitricitabine</value></item>
+		<item><label>Tenofovir/Emtricitabine (TDF + FTC)</label><value>tenofovir_Emtricitabine</value></item>
 		<item><label>Tenofovir/Lamivudine (TDF + 3TC)</label><value>tenofovir_lamivudine</value></item>
 		<item><label>Tetracycline</label><value>tetracycline</value></item>
 		<item><label>Zidovudine (AZT)</label><value>zidovudine</value></item>
@@ -1119,9 +1121,10 @@
     
   <select ref="other_treatment">
     <label>Select Other Applicable Treatments:</label>
-    <item><label>Oxygen</label><value>oxygen</value></item>
+    <item><label>Other</label><value>other</value></item>
+	<item><label>Oxygen</label><value>oxygen</value></item>
     <item><label>Fluids</label><value>fluids</value></item>
-    <item><label>No Other Treatments, Oxygen and Fluids Blank</label><value>blank</value></item>
+    <item><label>Boxes left Blank</label><value>blank</value></item>
 	<hint> Select any other items under the Treatments section, like Oxygen or Fluids.  If none are listed, select 'No Other Treatments'</hint>
   </select>
 
@@ -1134,15 +1137,14 @@
 	<item><label>Section Left Blank</label><value>blank</value></item>
 	<hint> Select a conculsion for this case </hint>
   </select1>
-  
-  <select1 ref="death_details">
+
+  <select ref="death_details">
     <label>Select Appropriate Details</label>
 	<item><label>Mother Death</label><value>maternal_death</value></item>
 	<item><label>Fetal Death / Loss of Pregnancy</label><value>death</value></item>
-	<item><label>Both Boxes Left Blank</label><value>blank</value></item>
 	<hint> Select a conculsion for this case </hint>
-  </select1>
-  
+  </select>
+
   <input ref="followup_days">
     <label>Follow up in how many days?</label>
   </input>
