--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -199,7 +199,7 @@
 	<bind nodeset="assessment/malnutrition" required="true()" relevant="selected(../categories, 'malnutrition')" constraint="not(selected(., 'blank') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'Section Left Blank' and another answer"  />
 	<bind nodeset="assessment/jaundice" required="true()" relevant="selected(../categories, 'jaundice')" constraint="not(selected(., 'blank') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'Section Left Blank' and another answer"  />
 	<bind nodeset="secondary_diagnosis_one" required="true()" />
-	<bind nodeset="secondary_diagnosis_two" required="true()" relevant="selected(../secondary_diagnosis_one, 'more_options')" />
+	<bind nodeset="secondary_diagnosis_two" required="true()" />
 	<bind nodeset="primary_diagnosis_one" required="true()" />
 	<bind nodeset="primary_diagnosis_two" required="true()" relevant="../primary_diagnosis_one = 'more_options'" />
 	<bind nodeset="diagnosis" calculate="if(../primary_diagnosis_one != 'more_options', ../primary_diagnosis_one, ../primary_diagnosis_two)" />
@@ -214,7 +214,7 @@
     <bind nodeset="drugs/prescribed/med/uncommon/drug_choices_three" relevant="selected(../drug_drill_down, 'drugs_three')" /> <!-- make select? -->
     <bind nodeset="drugs/prescribed/med/uncommon/drug_choices_four" relevant="selected(../drug_drill_down, 'drugs_four')" /> <!-- make select? -->
 	<bind nodeset="drugs/prescribed/med/uncommon/drug_prescribed" calculate="if(../drug_name_typed !='', ../drug_name_typed, if(../drug_choices_one != '', ../drug_choices_one, if(../drug_choices_two != '', ../drug_choices_two, if(../drug_choices_three != '', ../drug_choices_three, ../drug_choices_four))))" />
-    <bind nodeset="drugs/prescribed/med/uncommon/dosage" type="decimal" /> <!-- make select? -->
+    <bind nodeset="drugs/prescribed/med/uncommon/dosage" type="decimal" constraint=". != '0'" jr:constraintMsg="Dosage can't be 0" /> <!-- make select? -->
     <bind nodeset="drugs/prescribed/med/uncommon/drug_formulation" required = "true()" />
     <bind nodeset="drugs/prescribed/med/uncommon/freq" required="true()" /> <!-- make select? -->
     <bind nodeset="drugs/prescribed/med/uncommon/freq_other" type="int" relevant="../freq = 'other'" /> <!-- make select? -->
@@ -231,7 +231,7 @@
     <bind nodeset="drugs/dispensed/med/uncommon/drug_choices_three" relevant="selected(../drug_drill_down, 'drugs_three')" /> <!-- make select? -->
     <bind nodeset="drugs/dispensed/med/uncommon/drug_choices_four" relevant="selected(../drug_drill_down, 'drugs_four')" /> <!-- make select? -->
 	<bind nodeset="drugs/dispensed/med/uncommon/drug_dispensed" calculate="if(../drug_name_typed !='', ../drug_name_typed, if(../drug_choices_one != '', ../drug_choices_one, if(../drug_choices_two != '', ../drug_choices_two, if(../drug_choices_three != '', ../drug_choices_three, ../drug_choices_four))))" />
-    <bind nodeset="drugs/dispensed/med/uncommon/dosage" type="decimal" /> <!-- make select? -->
+    <bind nodeset="drugs/dispensed/med/uncommon/dosage" type="decimal" constraint=". != '0'" jr:constraintMsg="Dosage can't be 0" /> <!-- make select? -->
     <bind nodeset="drugs/dispensed/med/uncommon/drug_formulation" required = "true()" />
     <bind nodeset="drugs/dispensed/med/uncommon/freq" required="true()" /> <!-- make select? -->
     <bind nodeset="drugs/dispensed/med/uncommon/freq_other" type="int" relevant="../freq = 'other'" /> <!-- make select? -->
@@ -507,7 +507,7 @@
     <label>Select Other Tests Ordered</label>
     <item><label>Stool</label><value>stool</value></item>
 	<item><label>CXR</label><value>CXR</value></item>
-	<item><label>HIV DNA PCR</label><value>hiv_pcr</value></item>
+	<item><label>HIV RNA PCR</label><value>hiv_pcr</value></item>
     <item><label>CD4</label><value>cd4</value></item>
     <item><label>WBC</label><value>wbc</value></item>
     <item><label>Sputum</label><value>sputum</value></item>
@@ -603,7 +603,7 @@
     <item><label>Mastoiditis</label><value>mastoiditis</value></item>
     <item><label>Acute Ear Infection</label><value>acute_ear_infection</value></item>
     <item><label>Chronic Ear Infection</label><value>chronic_ear_infection</value></item>
-    <item><label>See More Options</label><value>more_options</value></item>
+	<item><label>None of these Diagnoses Selected</label><value>blank</value></item>
 	<hint> Select any secondary diagnoses for the patient </hint>
   </select>
 
@@ -621,7 +621,7 @@
     <item><label>Skin Disease Non-Infectious</label><value>skin_disease</value></item>
     <item><label>Eye Infection</label><value>eye_infection</value></item>
     <item><label>Other</label><value>other</value></item>
-	<item><label>Section Left Blank</label><value>blank</value></item>
+	<item><label>None of these Diagnoses Selected</label><value>blank</value></item>
 	<hint> Select any secondary diagnoses for the patient </hint>
   </select>
 
@@ -667,11 +667,11 @@
   <label>Prescribed Drug</label>
   <repeat nodeset="drugs/prescribed/med">
     <jr:chooseCaption><output value="$i" />. <output value="if(common_drug != 'enter_manually', prettify-drug(common_drug), if(uncommon/drug_prescribed, prettify-drug(uncommon/drug_prescribed), '(no drug selected)'))" /></jr:chooseCaption>
-    <jr:mainHeader>Describe Treatment:</jr:mainHeader>
+    <jr:mainHeader>Describe Protocol Recommended Treatment:</jr:mainHeader>
     <jr:addCaption>Add another <output value="$name" /></jr:addCaption>
     <jr:addEmptyCaption>Add a <output value="$name" /></jr:addEmptyCaption>
-    <jr:doneCaption>No more drugs to enter; Next question</jr:doneCaption>
-    <jr:doneEmptyCaption>No drugs to enter; Skip question</jr:doneEmptyCaption>
+    <jr:doneCaption>No more protocol recommended drugs to enter; Next question</jr:doneCaption>
+    <jr:doneEmptyCaption>No protocol recommended drugs to enter; Skip question</jr:doneEmptyCaption>
     <jr:delCaption>Remove a <output value="$name" /></jr:delCaption>
 
 	<select1 ref="common_drug_one">
@@ -689,6 +689,7 @@
 		<item><label>Co-trimoxazole (Septrin), 240 mg, tablet, BD x 5 days</label><value>co_trimoxazole-tablet-240-2-5</value></item>
 		<item><label>Co-trimoxazole (Septrin), 960 mg, tablet, BD x 5 days</label><value>co_trimoxazole-tablet-960-2-5</value></item>
 		<item><label>See More Options of Commonly Prescribed Drugs</label><value>more_options</value></item>
+		<item><label>Prescription not on Common Drug List - Search Alphabetically</label><value>enter_manually</value></item>
 	</select1>	
 	
 	<select1 ref="common_drug_two">
@@ -704,7 +705,7 @@
 		<item><label>Paracetamol (Panadol), 500 mg, tablet, BD x 3 days</label><value>paracetamol-tablet-500-2-3</value></item>
 		<item><label>Paracetamol (Panadol), 1000 mg (1 g), tablet, TDS x 3 days</label><value>paracetamol-tablet-1000-3-3</value></item>
 		<item><label>ORS, sachet, 200mL after each loose stool</label><value>ors-sachet-200--</value></item>
-		<item><label>Prescription not on Common Drug List - Enter in Steps</label><value>enter_manually</value></item>
+		<item><label>Prescription not on Common Drug List - Search Alphabetically</label><value>enter_manually</value></item>
 	</select1>
 	
 	<select1 ref="uncommon/drug_drill_down">
@@ -766,7 +767,7 @@
 		<item><label>Ethambutol / Isoniazid</label><value>ethambutol_isoniazid</value></item>
 		<item><label>Ethambutol</label><value>ethambutol</value></item>
 		<item><label>Ethmbtl/Isnzd/Prznmd/Rfmpcn (4FDC)</label><value>ethambutol_isoniazid_pyrazinam</value></item>
-		<item><label>Ferrous Sulphate BP (FeSo4)</label><value>ferrous_sulphate_bp</value></item>
+		<item><label>Ferrous Sulphate BP (FeSO4)</label><value>ferrous_sulphate_bp</value></item>
 		<item><label>Fluconazole</label><value>fluconazole</value></item>
 		<item><label>Folic Acid</label><value>folic_acid</value></item>
 		<item><label>Frusemide (Lasix)</label><value>frusemide</value></item>
@@ -786,7 +787,7 @@
 		<item><label>Levonorgestrel (Microlut)</label><value>levonorgestrel_microlut</value></item>
 		<item><label>Lignocaine 1%</label><value>lignocaine</value></item>
 		<item><label>Lopinavir/Ritonavir (LPV/r)</label><value>lopinavir_ritonavir</value></item>
-		<item><label>Magnesium Sulphate (MgSo4)</label><value>magnesium_sulphate</value></item>
+		<item><label>Magnesium Sulphate (MgSO4)</label><value>magnesium_sulphate</value></item>
 		<item><label>Magnesium Trisilicate (MMT)</label><value>magnesium_trisilicate</value></item>
 		<item><label>Mebendazole (Vermox)</label><value>mebendazole</value></item>
 		<item><label>Methyldopa (Aldomet)</label><value>methyldopa</value></item>
@@ -826,7 +827,7 @@
 		<item><label>Stavudine (d4T)</label><value>stavudine</value></item>
 		<item><label>Stavudine/Lamivudine (d4T + 3TC )</label><value>stavudine_lamivudine</value></item>
 		<item><label>Streptomycin</label><value>streptomycin</value></item>
-		<item><label>Tenofovir/Emitricitabine (TDF + FTC)</label><value>tenofovir_emitricitabine</value></item>
+		<item><label>Tenofovir/Emtricitabine (TDF + FTC)</label><value>tenofovir_emtricitabine</value></item>
 		<item><label>Tenofovir/Lamivudine (TDF + 3TC)</label><value>tenofovir_lamivudine</value></item>
 		<item><label>Tetracycline</label><value>tetracycline</value></item>
 		<item><label>Zidovudine (AZT)</label><value>zidovudine</value></item>
@@ -882,10 +883,10 @@
   </group>
 
   <group>
-  <label>Dispensed/Substituted Drug</label>
+  <label>Substituted Drug</label>
   <repeat nodeset="drugs/dispensed/med">
     <jr:chooseCaption><output value="$i" />. <output value="if(common_drug != 'enter_manually', prettify-drug(common_drug), if(uncommon/drug_dispensed, prettify-drug(uncommon/drug_dispensed), '(no drug selected)'))" /></jr:chooseCaption>
-    <jr:mainHeader>Describe drugs dispensed and not on prescription:</jr:mainHeader>
+    <jr:mainHeader>Describe Drug Substitutions:</jr:mainHeader>
     <jr:addCaption>Add another <output value="$name" /></jr:addCaption>
     <jr:addEmptyCaption>Add a <output value="$name" /></jr:addEmptyCaption>
     <jr:doneCaption>No more drugs to enter; Next question</jr:doneCaption>
@@ -907,6 +908,7 @@
 		<item><label>Co-trimoxazole (Septrin), 240 mg, tablet, BD x 5 days</label><value>co_trimoxazole-tablet-240-2-5</value></item>
 		<item><label>Co-trimoxazole (Septrin), 960 mg, tablet, BD x 5 days</label><value>co_trimoxazole-tablet-960-2-5</value></item>
 		<item><label>See More Options of Commonly Prescribed Drugs</label><value>more_options</value></item>
+		<item><label>Substitution not on Common Drug List - Search Alphabetically</label><value>enter_manually</value></item>
 	</select1>	
 	
 	<select1 ref="common_drug_two">
@@ -922,7 +924,7 @@
 		<item><label>Paracetamol (Panadol), 500 mg, tablet, BD x 3 days</label><value>paracetamol-tablet-500-2-3</value></item>
 		<item><label>Paracetamol (Panadol), 1000 mg (1 g), tablet, TDS x 3 days</label><value>paracetamol-tablet-1000-3-3</value></item>
 		<item><label>ORS, sachet, 200mL after each loose stool</label><value>ors-sachet-200--</value></item>
-		<item><label>Substitution not on Common Drug List - Enter in Steps</label><value>enter_manually</value></item>
+		<item><label>Substitution not on Common Drug List - Search Alphabetically</label><value>enter_manually</value></item>
 	</select1>
 	
 	<select1 ref="uncommon/drug_drill_down">
@@ -984,7 +986,7 @@
 		<item><label>Ethambutol / Isoniazid</label><value>ethambutol_isoniazid</value></item>
 		<item><label>Ethambutol</label><value>ethambutol</value></item>
 		<item><label>Ethmbtl/Isnzd/Prznmd/Rfmpcn (4FDC)</label><value>ethambutol_isoniazid_pyrazinam</value></item>
-		<item><label>Ferrous Sulphate BP (FeSo4)</label><value>ferrous_sulphate_bp</value></item>
+		<item><label>Ferrous Sulphate BP (FeSO4)</label><value>ferrous_sulphate_bp</value></item>
 		<item><label>Fluconazole</label><value>fluconazole</value></item>
 		<item><label>Folic Acid</label><value>folic_acid</value></item>
 		<item><label>Frusemide (Lasix)</label><value>frusemide</value></item>
@@ -1003,7 +1005,7 @@
 		<item><label>Levonorgestrel (Microlut)</label><value>levonorgestrel_microlut</value></item>
 		<item><label>Lignocaine 1%</label><value>lignocaine</value></item>
 		<item><label>Lopinavir/Ritonavir (LPV/r)</label><value>lopinavir_ritonavir</value></item>
-		<item><label>Magnesium Sulphate (MgSo4)</label><value>magnesium_sulphate</value></item>
+		<item><label>Magnesium Sulphate (MgSO4)</label><value>magnesium_sulphate</value></item>
 		<item><label>Magnesium Trisilicate (MMT)</label><value>magnesium_trisilicate</value></item>
 		<item><label>Mebendazole (Vermox)</label><value>mebendazole</value></item>
 		<item><label>Methyldopa (Aldomet)</label><value>methyldopa</value></item>
@@ -1043,7 +1045,7 @@
 		<item><label>Stavudine (d4T)</label><value>stavudine</value></item>
 		<item><label>Stavudine/Lamivudine (d4T + 3TC )</label><value>stavudine_lamivudine</value></item>
 		<item><label>Streptomycin</label><value>streptomycin</value></item>
-		<item><label>Tenofovir/Emitricitabine (TDF + FTC)</label><value>tenofovir_emitricitabine</value></item>
+		<item><label>Tenofovir/Emtricitabine (TDF + FTC)</label><value>tenofovir_Emtricitabine</value></item>
 		<item><label>Tenofovir/Lamivudine (TDF + 3TC)</label><value>tenofovir_lamivudine</value></item>
 		<item><label>Tetracycline</label><value>tetracycline</value></item>
 		<item><label>Zidovudine (AZT)</label><value>zidovudine</value></item>
@@ -1093,9 +1095,10 @@
     
   <select ref="other_treatment">
     <label>Select Other Applicable Treatments:</label>
-    <item><label>Oxygen</label><value>oxygen</value></item>
+    <item><label>Other</label><value>other</value></item>
+	<item><label>Oxygen</label><value>oxygen</value></item>
     <item><label>Fluids</label><value>fluids</value></item>
-    <item><label>No Other Treatments, Oxygen and Fluids Blank</label><value>blank</value></item>
+    <item><label>Boxes left Blank</label><value>blank</value></item>
 	<hint> Select any other items under the Treatments section, like Oxygen or Fluids.  If none are listed, select 'No Other Treatments'</hint>
   </select>
   
