add verison attributes to clinic forms

--- a/bhoma/xforms/bhoma_delivery.xhtml
+++ b/bhoma/xforms/bhoma_delivery.xhtml
@@ -7,7 +7,7 @@
   <h:title>BHOMA Labour and Delivery</h:title>
   <model>
 		<instance>
-			<delivery xmlns="http://cidrz.org/bhoma/delivery">
+			<delivery xmlns="http://cidrz.org/bhoma/delivery" version="2">
         <Meta>
             <clinic_id />
             <TimeStart />
