--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -7,7 +7,7 @@
   <h:title>BHOMA Adult Visit</h:title>
   <model>
 		<instance>
-			<general xmlns="http://cidrz.org/bhoma/general">
+			<general xmlns="http://cidrz.org/bhoma/general" version="2">
         
         <Meta>
             <clinic_id />
