--- a/bhoma/xforms/bhoma_mortality_register.xhtml
+++ b/bhoma/xforms/bhoma_mortality_register.xhtml
@@ -7,7 +7,7 @@
   <h:title>BHOMA Mortality Register</h:title>
   <model>
 		<instance>
-			<mortality_register xmlns="http://cidrz.org/bhoma/mortality_register">
+			<mortality_register xmlns="http://cidrz.org/bhoma/mortality_register" version="2">
         
         <Meta>
             <clinic_id />
