--- a/bhoma/xforms/bhoma_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_pregnancy.xhtml
@@ -7,7 +7,7 @@
   <h:title>BHOMA Antenatal Care</h:title>
   <model>
 		<instance>
-			<pregnancy xmlns="http://cidrz.org/bhoma/pregnancy">
+			<pregnancy xmlns="http://cidrz.org/bhoma/pregnancy" version="2">
         
         <Meta>
             <clinic_id />
