--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -7,7 +7,7 @@
   <h:title>BHOMA Sick Antenatal Visit</h:title>
   <model>
 		<instance>
-			<sick_pregnancy xmlns="http://cidrz.org/bhoma/sick_pregnancy">
+			<sick_pregnancy xmlns="http://cidrz.org/bhoma/sick_pregnancy" version="2">
         
         <Meta>
             <clinic_id />
