--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -7,7 +7,7 @@
   <h:title>BHOMA Pediatric Visit</h:title>
   <model>
 		<instance>
-			<underfive xmlns="http://cidrz.org/bhoma/underfive">
+			<underfive xmlns="http://cidrz.org/bhoma/underfive" version="2">
         <Meta>
             <clinic_id />
             <TimeStart />
