more form upates from user tests
all:
- added med duration units question
- made on-haart question dependent on hiv results
- rewording, grammar, mispellings
- drug drill down choices required
- resolution for preg and deliv multiple choice because of death option of
mother and/or fetus
- changed prescription heading
- multivitamin label
- changed hct limit from 100 to 60
- changed variable name on fetal death to fetal_death from death

delivery:
- added urinalysis question, rewrote protein/glucose questions
- removed apgar question

--- a/bhoma/xforms/bhoma_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_pregnancy.xhtml
@@ -110,7 +110,7 @@
 	<bind nodeset="hiv_partner" required="true()" />
 	<bind nodeset="cd4_possible" required="true()" relevant="../hiv_result != 'nr'" />
     <bind nodeset="cd4" type="int" relevant="../cd4_possible = 'results'" constraint=". &lt;= 3000" jr:constraintMsg="CD4 count should be less than 3000 (cells/mm3)" />
-    <bind nodeset="on_haart" required="true()" relevant="../hiv_result != 'nr'" />
+    <bind nodeset="on_haart" required="true()" relevant="../hiv_result != 'nr' or ../hiv_result != 'nd' />
 	<bind nodeset="pmtct" required="true()" relevant="../hiv_result != 'nr'" constraint="not((selected(., 'blank')) and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'Question Left Blank' and another answer" />
 	<bind nodeset="rpr" required="true()" />
 	<bind nodeset="checklist" constraint="not((selected(., 'none')) and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'None of the Above' and another answer" />
