--- a/bhoma/xforms/bhoma_delivery.xhtml
+++ b/bhoma/xforms/bhoma_delivery.xhtml
@@ -178,14 +178,14 @@
     <bind nodeset="vitals/weight" type="decimal" constraint=". &lt; 250" jr:constraintMsg="Weight should be less than 250 kg" /> <!-- soft constraint -->
     <bind nodeset="danger_signs" required="true()" constraint="not((selected(., 'none') or selected(., 'blank')) and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'No Danger Signs' or 'Section Left Blank' and another answer" />
 	<bind nodeset="history/hiv_result" required="true()" />
-	<bind nodeset="history/on_haart" required="true()" relevant="../hiv_result != 'nr' or ../hiv_result != 'nd'" />
+	<bind nodeset="history/on_haart" required="true()" relevant="../hiv_result != 'nr' and ../hiv_result != 'nd'" />
 	<bind nodeset="admission/hgb" type="int" constraint=". &lt;= 25" jr:constraintMsg="Hgb should be less than 25 (g/dL)" />
 	<bind nodeset="admission/contractions" required="true()" />	
 	<bind nodeset="admission/membranes" required="true()" />	
 	<bind nodeset="admission/fetal_movement" required="true()" />
 	<bind nodeset="admission/urinalysis" required="true()" constraint="not((selected(., 'blank')) and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'Neither, Both left Blank' and another answer" />
-	<bind nodeset="admission/urinalysis_protein" required="true()" relevant="../urinalysis = 'protein'" />
-	<bind nodeset="admission/urinalysis_glucose" required="true()" relevant="../urinalysis = 'glucose'" />
+	<bind nodeset="admission/urinalysis_protein" required="true()" relevant="selected(../urinalysis, 'protein')" />
+	<bind nodeset="admission/urinalysis_glucose" required="true()" relevant="selected(../urinalysis, 'glucose')" />
     <bind nodeset="phys_exam/abnormalities" required="true()" constraint="not((selected(., 'none') or selected(., 'blank')) and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'No Abnormalities in Above Systems' or 'Question Left Blank' and another answer" />
     <bind nodeset="phys_exam/fundal_height" type="int" constraint=". &lt; 50" jr:constraintMsg="Fundal Height should be less than 50 cm"/>
 	<bind nodeset="phys_exam/presentation" required="true()" />
@@ -262,7 +262,7 @@
 	<bind nodeset="drugs/dispensed/med/uncommon/duration_units" required="true()" /> 
     <bind nodeset="other_treatment" required="true()" relevant="../continue_form = 'y'" constraint="not(selected(., 'blank') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'Boxes left Blank' and another answer" />
     <bind nodeset="resolution" relevant="../continue_form = 'y'" required="true()" constraint="not(selected(., 'blank') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'Section Left Blank' and another answer" />
-	<bind nodeset="death_details" required="true()" relevant="../resolution = 'death'" />
+	<bind nodeset="death_details" required="true()" relevant="selected(../resolution,'death')" />
     <bind nodeset="followup_days" type="int" constraint=". &lt;= 100" jr:constraintMsg="Follow ups should be in fewer than 100 days." relevant="../resolution = 'followup'" />    
 
 	</model>
@@ -431,7 +431,7 @@
   </input>
   
   <select1 ref="phys_exam/rom">
-    <label>Physical Exam: ROM:</label>
+    <label>Physical Exam: ROM</label>
     <item><label>Yes</label><value>y</value></item>
     <item><label>No</label><value>n</value></item>
 	<item><label>Question Left Blank</label><value>blank</value></item>
@@ -555,7 +555,7 @@
   </select1>
   
   <select1 ref="newborn_eval/malformation">
-    <label>Are there Congenital Malformation?</label>
+    <label>Are there Congenital Malformations?</label>
     <item><label>Yes</label><value>y</value></item>
     <item><label>No</label><value>n</value></item>
 	<item><label>Question Left Blank</label><value>blank</value></item>
